--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -311,7 +311,14 @@
             android:label="JayRod - JLA, Xmen and Avengers" >
             <intent-filter>
                 <action android:name="org.omnirom.DaylightHeaderPack1" />
-
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".evolution"
+            android:label="Ecnivtwelve and Prudev - Evolution X" >
+            <intent-filter>
+                <action android:name="org.omnirom.DaylightHeaderPack1" />
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
