--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -94,7 +94,7 @@
 
         <activity
             android:name=".nature"
-            android:label="Nature" >
+            android:label="@string/nature_header" >
             <intent-filter>
                 <action android:name="org.omnirom.DaylightHeaderPack1" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -103,7 +103,7 @@
 
         <activity
             android:name=".poly"
-            android:label="Poly" >
+            android:label="@string/poly_header" >
             <intent-filter>
                 <action android:name="org.omnirom.DaylightHeaderPack1" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -112,7 +112,7 @@
 
         <activity
             android:name=".naturerandom"
-            android:label="Nature (random)" >
+            android:label="@string/nature_header_random" >
             <intent-filter>
                 <action android:name="org.omnirom.DaylightHeaderPack1" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -121,7 +121,7 @@
 
         <activity
             android:name=".wavvy"
-            android:label="Wavvy" >
+            android:label="@string/wavvy_header" >
             <intent-filter>
                 <action android:name="org.omnirom.DaylightHeaderPack1" />
                 <category android:name="android.intent.category.DEFAULT" />
