OmniStyle: Add 'Colorful' headers
Change-Id: I7ad2d4b2965b80e006c05bf00a3defc89a3b5b05
Signed-off-by: Sipun Ku Mahanta <sipunkumar85@gmail.com>
Signed-off-by: Joey Huab <joey@evolution-x.org>

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -316,5 +316,13 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".colorful"
+            android:label="Colorful" >
+            <intent-filter>
+                <action android:name="org.omnirom.DaylightHeaderPack1" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
     </application>
 </manifest>
